--- a/components/team.html
+++ b/components/team.html
@@ -3,7 +3,7 @@
   <div class="container p-5">
     <div class="row py-2"> 
       <!-- individual card -->
-        <div class="team-card-bg p-5">
+        <div class="bg-custom-gray p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/ayap.jpg" alt="ayap.jpg" class="img-fluid w-75 rounded-circle">
@@ -26,7 +26,7 @@
     </div>
     <div class="row py-2"> 
       <!-- individual card 2 -->
-        <div class="team-card-bg-2 p-5">
+        <div class="p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="img-fluid w-75 h-auto rounded-circle">
@@ -50,7 +50,7 @@
     </div>
     <div class="row py-2"> 
       <!-- individual card -->
-        <div class="team-card-bg p-5">
+        <div class="bg-custom-gray p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/cruz.jpg" alt="cruz.jpg" class="img-fluid w-75 rounded-circle">
@@ -73,7 +73,7 @@
     </div>
     <div class="row py-2"> 
       <!-- individual card 2-->
-        <div class="team-card-bg-2 p-5">
+        <div class="p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/fajardo.jpg" alt="fajardo.jpg" class="img-fluid w-75 h-auto rounded-circle">
@@ -97,7 +97,7 @@
     </div>
     <div class="row py-2"> 
       <!-- individual card -->
-        <div class="team-card-bg p-5">
+        <div class="bg-custom-gray p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/mahinay.jpg" alt="mahinay.jpg" class="img-fluid w-75 rounded-circle">
@@ -123,7 +123,7 @@
     </div>
     <div class="row py-2"> 
       <!-- individual card 2-->
-        <div class="team-card-bg-2 p-5">
+        <div class="p-5">
           <div class="row">
             <div class="col-md-4 text-center my-auto">
               <img src="assets/images/individual/marilao.jpg" alt="marilao.jpg" class="img-fluid w-75 h-auto rounded-circle">
