--- a/components/gallery.html
+++ b/components/gallery.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="text-heading text-white">ACTIVITY GALLERY</h1>
+  <h1 class="text-heading team-title">ACTIVITY GALLERY</h1>
   <div class="container p-5">
     <div class="row">
       <div class="col-lg-4 col-md-6 p-4 mx-auto">
