--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ html, body {
 
 .parallax-background{
   background-size: cover; 
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
-  height: 100% !important;
+  height: 100%;
   width: 100%;
 }
 
