add simple animation

--- a/components/team.html
+++ b/components/team.html
@@ -3,61 +3,61 @@
   <div class="container py-5">
     <div class="row">
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/ayap.jpg" alt="ayap.jpg" class="img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Ayap">
+        <img src="assets/images/individual/ayap.jpg" alt="ayap.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Ayap">
         <h2 class="mb-0 text-montserrat team-heading-2">Ayap, Kathleen Shayne</h2>
         <p class="text-montserrat team-text-2">Documentation Specialist</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Corales">
+        <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Corales">
         <h2 class="mb-0 text-montserrat team-heading-2">Corales, Mark Reinell S.</h2>
         <p class="text-montserrat team-text-2">Project Manager</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/cruz.jpg" alt="cruz.jpg" class="img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Cruz">
+        <img src="assets/images/individual/cruz.jpg" alt="cruz.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Cruz">
         <h2 class="mb-0 text-montserrat team-heading-2">Cruz, Ace Von Alfred L.</h2>
         <p class="text-montserrat team-text-2">Data Analyst</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/fajardo.jpg" alt="fajardo.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Fajardo">
+        <img src="assets/images/individual/fajardo.jpg" alt="fajardo.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Fajardo">
         <h2 class="mb-0 text-montserrat team-heading-2">Fajardo, Louise Kaye A.</h2>
         <p class="text-montserrat team-text-2">Documentation Specialist II</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/hilario.jpg" alt="hilario.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Hilario">
+        <img src="assets/images/individual/hilario.jpg" alt="hilario.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Hilario">
         <h2 class="mb-0 text-montserrat team-heading-2">Hilario, Andrew G.</h2>
         <p class="text-montserrat team-text-2">Frontend Developer</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/lumaban.jpg" alt="lumaban.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Lumaban">
+        <img src="assets/images/individual/lumaban.jpg" alt="lumaban.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Lumaban">
         <h2 class="mb-0 text-montserrat team-heading-2">Lumaban, Lemnuel G.</h2>
         <p class="text-montserrat team-text-2">Backend Engineer</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/lumaque.jpg" alt="lumaque.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Lumaque">
+        <img src="assets/images/individual/lumaque.jpg" alt="lumaque.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Lumaque">
         <h2 class="mb-0 text-montserrat team-heading-2">Lumaque, jhericoh Janquill N.</h2>
         <p class="text-montserrat team-text-2">Mobile Developer</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/mahinay.jpg" alt="mahinay.jpg" class="img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Mahinay">
+        <img src="assets/images/individual/mahinay.jpg" alt="mahinay.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Mahinay">
         <h2 class="mb-0 text-montserrat team-heading-2">Mahinay, Joanne Kaye F.</h2>
         <p class="text-montserrat team-text-2">Data Analyst II</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/marilao.jpg" alt="marilao.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Marilao">
+        <img src="assets/images/individual/marilao.jpg" alt="marilao.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Marilao">
         <h2 class="mb-0 text-montserrat team-heading-2">Marilao, Justin Troy R.</h2>
         <p class="text-montserrat team-text-2">Software Engineer</p>
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
-        <img src="assets/images/individual/rivera.jpg" alt="rivera.jpg" class="h-auto img-fluid w-50 rounded-circle" data-bs-toggle="modal" data-bs-target="#Rivera">
+        <img src="assets/images/individual/rivera.jpg" alt="rivera.jpg" class="h-auto img-fluid w-50 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Rivera">
         <h2 class="mb-0 text-montserrat team-heading-2">Rivera, Hannah Joy A.</h2>
         <p class="text-montserrat team-text-2">Software Engineer</p>
       </div>
