added oop section

--- a/components/oop.html
+++ b/components/oop.html
@@ -1,3 +1,10 @@
-<div class="text-montserrat w-100">
-  <h1>What is oop? </h1>
+<div class="w-100">
+  <div class="col-12 d-block p-5">
+    <h1 class="text-heading team-title text-light pad-title text-shadow" style="font-size: 6rem !important;">what is oop?</h1>
+  </div>
+  <div class="d-flex p-5 h-100">
+    <h2 class="text-montserrat text-justify text-center text-light pad-text text-small text-sm">
+      Object Oriented programming (OOP) is a programming paradigm that relies on the concept of classes and objects. It is used to structure a software program into simple, reusable pieces of code blueprints (usually called classes), which are used to create individual instances of objects. There are many object-oriented programming languages including JavaScript, C++, Java, and Python.
+    </h2>
+  </div>
 </div>
