update minor width bug

--- a/components/oop-requirement-models.html
+++ b/components/oop-requirement-models.html
@@ -2,11 +2,11 @@
     <div class="col-12 d-block p-5">
       <h1 class="text-heading team-title text-light mg-style text-shadow hero-title">What are OOP Requirements Models?</h1>
     </div>
-    <div class="d-flex p-5 h-100" style="position: relative;">
-      <div class="blend-container">
+    <div class="d-flex p-3 h-100">
+      <!-- <div class="blend-container">
        
-      </div>
-      <div class="oop-models-answers"> <!--background color for answers-->
+      </div> -->
+      <div class="oop-models-answers p-3"> <!--background color for answers-->
         <ul class="text-montserrat text-light text-small">
        <li>
          Class Model - The class model displays all the classes that exist in the system. The class model depicts the properties and behavior of the objects. The class diagram depicts the class model. The class diagram displays the class name, followed by the attributes, and then the functions or methods that relates to the class's object. The goal of creating a class model is to capture real-world concepts that are relevant to an application.
