--- a/components/oop.html
+++ b/components/oop.html
@@ -1,10 +1,10 @@
-<div class="w-100">
-  <div class="col-12 d-block p-5">
+<div class="w-100 p-5">
+  <div class="col-12 d-block py-5">
     <h1 class="text-heading team-title text-light mg-style text-shadow hero-title">what is oop?</h1>
   </div>
-  <div class="d-flex p-5 h-100">
-    <h2 class="text-montserrat text-justify text-center text-light mg-style text-small">
+  <div class="d-flex h-100">
+    <p class="text-montserrat text-justify text-center text-light mg-style text-small">
       Object Oriented programming (OOP) is a programming paradigm that relies on the concept of classes and objects. It is used to structure a software program into simple, reusable pieces of code blueprints (usually called classes), which are used to create individual instances of objects. There are many object-oriented programming languages including JavaScript, C++, Java, and Python.
-    </h2>
+    </p>
   </div>
 </div>
