add another team and optimize images

--- a/components/oop_and_example.html
+++ b/components/oop_and_example.html
@@ -1,37 +1,42 @@
-<div class="w-100 oop_examples" >
-    <div class="col-12 "> 
-        <h1 class="text-heading text-shadow team-title text-center" style="font-size: 2rgitem;">What are the four basic object-oriented programming and examples?</h1> 
+<div class="p-5 w-100">
+    <div class="py-5 col-12"> 
+        <h1 class="text-center text-heading text-shadow team-title" style="font-size: 2rgitem;">What are the four basic object-oriented programming and examples?</h1> 
     </div>
-    <div class="d-flex p-5 h-100">
-    <h2 class="text-montserrat text-center text-justify text-sm">
-        Object-Oriented programming has four basic concepts which are Encapsulation, Abstract, Inheritance and Polymorphism. </h2>
+    <h4 class="text-center text-justify text-small text-montserrat">
+        Object-Oriented programming has four basic concepts which are Encapsulation, Abstract, Inheritance and Polymorphism. 
+    </h4>
+    <div class="p-5 d-flex h-100">
         <div>
-            <ul> <li>Encapsulation <br>
-                The different objects inside of each program will try to communicate with each other automatically.  
-                If a programmer wants to stop from interacting with each other, they need to be encapsulated in individual classes. 
-                 Through the process of encapsulation, classes cannot change or interact with the specific variables and functions of an object.</li>
-              </ul>
+            <ul class="text-montserrat text-small"> 
+                <li>
+                    Encapsulation <br>
+                    The different objects inside of each program will try to communicate with each other automatically.  
+                    If a programmer wants to stop from interacting with each other, they need to be encapsulated in individual classes. 
+                        Through the process of encapsulation, classes cannot change or interact with the specific variables and functions of an object.
+                </li>
+            </ul>
         
-            <ul>
-                <li>Abstract </li><br>
-                Abstraction is like an extension of encapsulation because it hides certain properties and methods from the outside code to make the interface of the objects simpler. Abstraction helps isolate the impact of changes made to the code so that if something goes wrong, the change will only affect the variables shown and not the outside code.
+            <ul class="text-montserrat text-small">
+                <li>
+                    Abstract <br>
+                    Abstraction is like an extension of encapsulation because it hides certain properties and methods from the outside code to make the interface of the objects simpler. Abstraction helps isolate the impact of changes made to the code so that if something goes wrong, the change will only affect the variables shown and not the outside code.
+                </li>
             </ul>
         
         </div>
         <div>
-            <ul>
-                <li>Inheritance<br>
-                  Using this concept, programmers can extend the functionality of the code's existing classes to eliminate repetitive code. For instance, elements of HTML code that include a text box, select field and checkbox have certain properties in common with specific methods.
+            <ul class="text-montserrat text-small">
+                <li>
+                    Inheritance<br>
+                    Using this concept, programmers can extend the functionality of the code's existing classes to eliminate repetitive code. For instance, elements of HTML code that include a text box, select field and checkbox have certain properties in common with specific methods.
                 </li>
             </ul>
-            <ul>
-              <li> Polymorphism<br>
-                  This technique meaning "many forms or shapes" allows programmers to render multiple HTML elements depending on the type of object. This concept allows programmers to redefine the way something works by changing how it is done or by changing the parts in which it is done. Terms of polymorphism are called overriding and overloading.
+            <ul class="text-montserrat text-small">
+              <li>
+                    Polymorphism<br>
+                    This technique meaning "many forms or shapes" allows programmers to render multiple HTML elements depending on the type of object. This concept allows programmers to redefine the way something works by changing how it is done or by changing the parts in which it is done. Terms of polymorphism are called overriding and overloading.
               </li>
           </ul>
         </div>
-            
-   
-    
     </div>
     </div>
