--- a/components/team.html
+++ b/components/team.html
@@ -3,6 +3,12 @@
   <div class="container py-5">
     <div class="px-5 row">
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
+        <img src="assets/images/individual/medina.jpg" alt="medina.jpg" class="h-auto img-fluid w-75 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Medina">
+        <h2 class="mb-0 text-montserrat team-heading-2">Medina, Joshua Merwin V.</h2>
+        <p class="text-montserrat team-text-2">Software Engineer</p>
+      </div>
+
+      <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
         <img src="assets/images/individual/ayap.jpg" alt="ayap.jpg" class="h-auto img-fluid w-75 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Ayap">
         <h2 class="mb-0 text-montserrat team-heading-2">Ayap, Kathleen Shayne</h2>
         <p class="text-montserrat team-text-2">Documentation Specialist</p>
@@ -64,6 +70,33 @@
     </div>
   </div>
 </div>
+
+<!-- Medina Modal -->
+<div class="modal fade" id="Medina" tabindex="-1" aria-hidden="true">
+  <div class="p-5 modal-dialog modal-lg bg-custom-gray">
+    <div class="mb-1 text-end">
+    <button type="button" class="ml-auto btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="row">
+      <div class="my-auto text-center col-lg-4">
+        <img src="assets/images/individual/medina.jpg" alt="medina.jpg" class="img-fluid w-75 rounded-circle">
+        <h4 class="mb-0 text-montserrat team-heading">Medina, Joshua Merwin V.</h4>
+        <p class="text-montserrat team-text">Software Engineer</p>
+      </div>
+      <div class="pt-4 text-center col-lg-8">
+        <p class="text-montserrat team-text">
+          <i>Knowledge is power</i>. And for me, that’s one piece of a puzzle to enjoy life. I uses my technological expertise by serving my clients, whether it be their need for web or mobile app development. In near future I see myself contributing at the technological advancement that will surely help everyone.
+        </p>
+        
+        <h4 class="pt-4 text-montserrat team-heading">My OOP Reflection</h4>
+        <p class="text-montserrat team-text">
+          Not just on <i>Object-Oriented Programming</i> but also in <i>Interactive Programming and Technologies</i> subject, Mrs. Fajardo had taught me how will I face the on going tech industry that I'll be facing. Even when I was just starting my freelance career, I remember asking for her guidance and look where I am now, still having that freelance job. I may already in the industry but I'm just getting started and I will do my best to be the best version of myself.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Medina Modal -->
 
 <!-- Ayap Modal -->
 <div class="modal fade" id="Ayap" tabindex="-1" aria-hidden="true">
