--- a/components/oop_and_example.html
+++ b/components/oop_and_example.html
@@ -5,8 +5,8 @@
     <h4 class="text-center text-justify text-small text-montserrat">
         Object-Oriented programming has four basic concepts which are Encapsulation, Abstract, Inheritance and Polymorphism. 
     </h4>
-    <div class="p-5 d-flex h-100">
-        <div>
+    <div class="p-1 row">
+        <div class="col-lg-6">
             <ul class="text-montserrat text-small"> 
                 <li>
                     Encapsulation <br>
@@ -24,7 +24,7 @@
             </ul>
         
         </div>
-        <div>
+        <div class="col-lg-6">
             <ul class="text-montserrat text-small">
                 <li>
                     Inheritance<br>
