--- a/components/team.html
+++ b/components/team.html
@@ -1,5 +1,10 @@
 <div>
   <h1 class="text-heading team-title">OUR TEAM</h1>
+  <div class="p-5 text-center">
+    <h4 class="mx-auto w-75 text-montserrat team-heading-2">
+      Individuals with different personalities. Individuals with different perspectives. Individuals with different talents. Individuals with different specialties but working in a single plan and goal. The personalities may clash but not the passion to succeed. The knowledge may not be enough but not the determination to reach the epilogue hand in hand. Everything may fall apart but the path of success they build. The following individuals formed a team that worked independently towards the denouement of this project. 
+    </h4>
+  </div>
   <div class="container py-5">
     <div class="px-5 row">
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
