--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body {
   background-position: center;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
-  height: 100%;
+  min-height: 100% !important;
   width: 100%;
 }
 
@@ -199,6 +199,6 @@ a:active {color:#FFF;}  /* Selected link   */
   font-size: 1rem !important;
   }
   .mg-style{
-    margin: 3rem auto; /* margin for title and definition text*/
+    margin: 1rem auto; /* margin for title and definition text*/
   }
 } 
