--- a/components/team.html
+++ b/components/team.html
@@ -26,6 +26,12 @@
       </div>
 
       <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
+        <img src="assets/images/individual/corpuz.jpg" alt="corpuz.jpg" class="h-auto img-fluid w-75 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Corpuz">
+        <h2 class="mb-0 text-montserrat team-heading-2">Corpuz, Bithiah Pelaiah T.</h2>
+        <p class="text-montserrat team-text-2">Mobile Developer</p>
+      </div>
+
+      <div class="py-4 m-auto text-center col-lg-3 col-md-4 col-sm-6">
         <img src="assets/images/individual/cruz.jpg" alt="cruz.jpg" class="h-auto img-fluid w-75 rounded-circle grow" data-bs-toggle="modal" data-bs-target="#Cruz">
         <h2 class="mb-0 text-montserrat team-heading-2">Cruz, Ace Von Alfred L.</h2>
         <p class="text-montserrat team-text-2">Data Analyst</p>
@@ -157,6 +163,34 @@
   </div>
 </div>
 <!-- Corales Modal -->
+
+<!-- Corpuz Modal -->
+<div class="modal fade" id="Corpuz" tabindex="-1" aria-hidden="true">
+  <div class="p-5 modal-dialog modal-lg bg-custom-gray">
+    <div class="mb-1 text-end">
+    <button type="button" class="ml-auto btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="row">
+      <div class="my-auto text-center col-lg-4">
+        <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="h-auto img-fluid w-75 rounded-circle">
+        <h4 class="mb-0 text-montserrat team-heading">Corpuz, Bithiah Pelaiah T.</h4>
+        <p class="text-montserrat team-text">Mobile Developer</p>
+      </div>
+
+      <div class="pt-4 text-center col-lg-8">
+        <p class="text-montserrat team-text">
+          Hi, I am currently a freelancer in Xamarin Forms.  I have several projects and clients, designed, and developed apps. I have been using Xamarin for a year now. It started from exploring other programming languages and fields. Anything can be possible if you would work hard and set your goals.
+        </p>
+        
+        <h4 class="pt-4 text-montserrat team-heading">My OOP Reflection</h4>
+        <p class="text-montserrat team-text">
+          OOP (Object – Oriented Programming) helped me to structure my program into a simpler and organized way.  As of now, I’m using the MVVM architecture pattern or a Model Views ViewModel, whereas Model holds the application data. Views, where the visuals elements are displayed on screen ViewModels, is a model transformation into values that can be displayed in views. This helped me to understand the application and can be looked at in an organized way.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Corpuz Modal -->
 
 <!-- Cruz Modal -->
 <div class="modal fade" id="Cruz" tabindex="-1" aria-hidden="true">
