--- a/components/team.html
+++ b/components/team.html
@@ -172,7 +172,7 @@
     </div>
     <div class="row">
       <div class="my-auto text-center col-lg-4">
-        <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="h-auto img-fluid w-75 rounded-circle">
+        <img src="assets/images/individual/corpuz.jpg" alt="corpuz.jpg" class="h-auto img-fluid w-75 rounded-circle">
         <h4 class="mb-0 text-montserrat team-heading">Corpuz, Bithiah Pelaiah T.</h4>
         <p class="text-montserrat team-text">Mobile Developer</p>
       </div>
