--- a/components/oop_and_example.html
+++ b/components/oop_and_example.html
@@ -9,24 +9,36 @@
             <ul> <li>Encapsulation <br>
                 The different objects inside of each program will try to communicate with each other automatically.  
                 If a programmer wants to stop from interacting with each other, they need to be encapsulated in individual classes. 
-                 Through the process of encapsulation, classes cannot change or interact with the specific variables and functions of an object.</li>
+                 Through the process of encapsulation, classes cannot change or interact with the specific variables and functions of an object. <br>
+                Example: 
+                The properties of an employee can include base salary, overtime and rate with a method called factor wage. Code written in an encapsulated, object-oriented way functions with fewer and fewer parameters. The fewer the number of parameters, the easier it is to use and maintain that function
+                
+                </li>
               </ul>
         
             <ul>
-                <li>Abstract </li><br>
-                Abstraction is like an extension of encapsulation because it hides certain properties and methods from the outside code to make the interface of the objects simpler. Abstraction helps isolate the impact of changes made to the code so that if something goes wrong, the change will only affect the variables shown and not the outside code.
+                <li>Abstract </li>
+                Abstraction is like an extension of encapsulation because it hides certain properties and methods from the outside code to make the interface of the objects simpler. Abstraction helps isolate the impact of changes made to the code so that if something goes wrong, the change will only affect the variables shown and not the outside code. <br>
+                Example: 
+                Think of a stereo system as an object with a complex logic board on the inside. It has buttons on the outside to allow for interaction with the object. When you press any of the buttons, you're not thinking about what happens on the inside because you can't see it. Even though you can't see the logic board completing functions as a result of pressing a button, it's still performing actions. This is an abstraction, which can be used to understand the concept of programming.
             </ul>
         
         </div>
         <div>
             <ul>
                 <li>Inheritance<br>
-                  Using this concept, programmers can extend the functionality of the code's existing classes to eliminate repetitive code. For instance, elements of HTML code that include a text box, select field and checkbox have certain properties in common with specific methods.
+                  Using this concept, programmers can extend the functionality of the code's existing classes to eliminate repetitive code. For instance, elements of HTML code that include a text box, select field and checkbox have certain properties in common with specific methods. <br>
+                  Example:
+                  Consider two classes. One is the superclass (parent) while the subclass (child) will inherit the properties of the parent class and modify its behavior. Programmers applying the technique of inheritance arrange these classes into a hierarchy of "is-a-type-of" relationships.
                 </li>
             </ul>
             <ul>
               <li> Polymorphism<br>
-                  This technique meaning "many forms or shapes" allows programmers to render multiple HTML elements depending on the type of object. This concept allows programmers to redefine the way something works by changing how it is done or by changing the parts in which it is done. Terms of polymorphism are called overriding and overloading.
+                  This technique meaning "many forms or shapes" allows programmers to render multiple HTML elements depending on the type of object. This concept allows programmers to redefine the way something works by changing how it is done or by changing the parts in which it is done. Terms of polymorphism are called overriding and overloading. <br>
+                  Example: 
+                  To better understand the two terms of polymorphism called overloading and overriding, it helps to visualize the process of walking. Babies learn to crawl first by using their arms and legs. Once they learn to stand and walk, they are ultimately changing the body part used to accomplish the act of walking. This term of polymorphism is called overloading.
+                    To understand the next term of overriding, think of how you naturally walk in the direction you are facing. When you stop and walk backward, this changes the direction of your path and also the mechanism of function. You are overriding the natural action that you usually complete.
+
               </li>
           </ul>
         </div>
